--- a/css/blocks/u_courses.css
+++ b/css/blocks/u_courses.css
@@ -31,7 +31,7 @@
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  max-height: 460px;
+  height: 460px;
   padding: 16px 20px 0 19px;
   border-radius: 10px;
   margin-top: 20px;
@@ -47,7 +47,7 @@
 }
 
 .available-course__main {
-  display: block;
+  display: inline-block;
   width: 400px;
   padding: 0;
 }
@@ -492,14 +492,34 @@
 }
 
 @media (min-width: 500px) {
-  .available-course__image {
+  .available-course {
+    overflow: hidden;
+  }
+  .available-course__side {
     position: relative;
+    min-height: 147px;
+  }
+  .available-course__image {
+    position: absolute;
+    -webkit-transform: translateY(-108px);
+    -ms-transform: translateY(-108px);
+    transform: translateY(-108px);
+    bottom: 0;
+    width: 420px;
+    min-height: 147px;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
   }
   .available-course__image img {
+    position: absolute;
     width: 420px;
-    -webkit-transform: translate(0, -50px);
-    -ms-transform: translate(0, -50px);
-    transform: translate(0, -50px);
+    min-height: 147px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
   }
 }
 
@@ -546,8 +566,10 @@
     margin-top: 140px;
   }
   .available-course {
+    overflow: hidden;
     position: relative;
     padding: 20px;
+    height: auto;
     margin-top: 30px;
   }
   .available-course__wrapper {
@@ -658,19 +680,28 @@
   }
   .available-course__side {
     position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 50%;
+    width: 420px;
     height: auto;
-    -webkit-transform: translate(30%, 20px);
-    -ms-transform: translate(30%, 20px);
-    transform: translate(30%, 20px);
+    bottom: -20px;
+    right: -20px;
+    margin: 0;
+    padding: 0;
+    -webkit-transform: translate(0%, 0px);
+    -ms-transform: translate(0%, 0px);
+    transform: translate(0%, 0px);
   }
-  .available-course__image img {
-    width: 100%;
+  .available-course__image {
+    position: absolute;
+    bottom: 0;
     -webkit-transform: translate(0, 0);
     -ms-transform: translate(0, 0);
     transform: translate(0, 0);
+  }
+  .available-course__image img {
+    width: 420px;
+    -webkit-transform: translate(0, -108px);
+    -ms-transform: translate(0, -108px);
+    transform: translate(0, -108px);
   }
   .available-course__info .info-blocks__wrapper .info-block {
     font-weight: 500;
@@ -763,8 +794,19 @@
     white-space: nowrap;
   }
   .available-course__side {
-    -webkit-transform: translate(-150px, 40px);
-    -ms-transform: translate(-150px, 40px);
-    transform: translate(-150px, 40px);
+    border: 1px solid;
+    -webkit-transform: translate(-150px);
+    -ms-transform: translate(-150px);
+    transform: translate(-150px);
+  }
+  .available-course__image {
+    border: 1px solid;
+  }
+  .available-course__image img {
+    width: 420px;
+    -webkit-transform: translate(0, -120px);
+    -ms-transform: translate(0, -120px);
+    transform: translate(0, -120px);
+    border: 1px solid;
   }
 }
