--- a/css/blocks/u_lesson.css
+++ b/css/blocks/u_lesson.css
@@ -996,6 +996,16 @@
   color: #481E8C !important;
 }
 
+.content-element__text-wrapper {
+  word-wrap: wrap;
+}
+
+.content-element__text-wrapper {
+  border: 1px solid;
+  width: 100%;
+  overflow: visible;
+}
+
 @media (min-width: 375px) {
   .header__item h3 {
     margin-top: 42px;
