--- a/css/blocks/u_courses.css
+++ b/css/blocks/u_courses.css
@@ -234,7 +234,7 @@
   margin-top: 0;
 }
 
-.available-course__info .info-blocks__wrapper .info-block:first-child .info-block__text .info-block__icon {
+.available-course__info .info-blocks__wrapper .info-block:first-child .info-block__icon {
   border: 2px solid #481e8c;
   border-radius: 5px;
 }
