--- a/css/blocks/u_courses.css
+++ b/css/blocks/u_courses.css
@@ -284,7 +284,7 @@
 
 .info-blocks__wrapper .info-block__text {
   font-weight: 500;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 16px;
   color: #161718;
   margin-right: 5px;
@@ -294,6 +294,10 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+}
+
+.info-blocks__wrapper .info-block:last-child {
+  font-size: 12px;
 }
 
 .info-blocks__wrapper .info-block:last-child .info-block__text {
@@ -375,7 +379,6 @@
     transform: translate(-1px, 3px);
   }
   .available-course__start .info-blocks__wrapper .info-block:first-child .info-block__text {
-    font-size: 14px;
     -webkit-transform: translate(7px, 4px);
     -ms-transform: translate(7px, 4px);
     transform: translate(7px, 4px);
@@ -725,8 +728,26 @@
   .available-course__info .info-blocks__wrapper .info-block:first-child .info-block__text {
     font-size: 14px;
   }
+  .available-course__info .info-blocks__wrapper .info-block:first-child .info-block__text .info-block__icon {
+    -webkit-transform: translate(-5px, 0);
+    -ms-transform: translate(-5px, 0);
+    transform: translate(-5px, 0);
+  }
   .available-course__info .info-blocks__wrapper .info-block:nth-child(2) .info-block__text {
     font-size: 14px;
+  }
+  .available-course__info .info-blocks__wrapper .info-block:nth-child(2) .info-block__text .info-block__icon {
+    -webkit-transform: translate(-5px, 0);
+    -ms-transform: translate(-5px, 0);
+    transform: translate(-5px, 0);
+  }
+  .available-course__info .info-blocks__wrapper .info-block:last-child .info-block__text {
+    font-size: 14px;
+  }
+  .available-course__info .info-blocks__wrapper .info-block:last-child .info-block__text .info-block__icon {
+    -webkit-transform: translate(-5px, 0);
+    -ms-transform: translate(-5px, 0);
+    transform: translate(-5px, 0);
   }
 }
 
