--- a/css/custom-tabs.css
+++ b/css/custom-tabs.css
@@ -2,3 +2,113 @@
   border-bottom: 1px solid #cfcfd2;
   margin-top: 13px;
 }
+
+@media (min-width: 375px) {
+  .tabs_underline .tabs__wrapper {
+    margin-top: 35px;
+  }
+}
+
+.tabs__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 -10px;
+  overflow-x: auto;
+  overflow-y: hidden;
+  -webkit-overflow-scrolling: touch;
+  overflow-scrolling: touch;
+}
+
+.tabs__item {
+  margin: 0 10px;
+  -webkit-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+}
+
+.tabs-item {
+  color: #9c9ba6;
+  padding-bottom: 10px;
+  display: block;
+  position: relative;
+  font-weight: 500;
+  -webkit-transition: 0.15s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition: 0.15s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: 0.15s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.tabs-item::before {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  right: 0;
+  height: 4px;
+  -webkit-transform: scale(1, 0);
+  -ms-transform: scale(1, 0);
+  transform: scale(1, 0);
+  -webkit-transform-origin: 0 100%;
+  -ms-transform-origin: 0 100%;
+  transform-origin: 0 100%;
+  -webkit-transition: 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition: 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+  background-color: #481e8c;
+}
+
+.tabs-item.is-open,
+.tabs-item:hover {
+  color: #481e8c;
+}
+
+.tabs-item__title {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2;
+}
+
+.tabs-item.is-open::before {
+  -webkit-transform: scale(1, 1);
+  -ms-transform: scale(1, 1);
+  transform: scale(1, 1);
+}
+
+.tabs-animated {
+  position: relative;
+}
+
+.tabs-animated .tabs-panel:not(.is-open) {
+  pointer-events: none;
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.tabs-animated .tabs-panel:not(.is-open) .tabs-panel-transform {
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+  -webkit-transition: 0.45s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition: 0.45s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: 0.45s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -webkit-transform: translate(0, 20px) scale(0.98);
+  -ms-transform: translate(0, 20px) scale(0.98);
+  transform: translate(0, 20px) scale(0.98);
+}
+
+.tabs-animated .tabs-panel-transform {
+  -webkit-transition: 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition: 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.tabs-animated .tabs-panel-transform {
+  -webkit-transition: 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition: 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
