--- a/css/u_main.css
+++ b/css/u_main.css
@@ -29,11 +29,13 @@ body {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  cursor: default;
 }
 
 a {
   text-decoration: none;
   background-color: transparent;
+  color: inherit;
 }
 
 .title-h2,
