--- a/css/blocks/u_lesson.css
+++ b/css/blocks/u_lesson.css
@@ -297,7 +297,30 @@
 }
 
 .content-element:nth-child(2) .content-element__text-wrapper {
-  overflow: scroll;
+  overflow-x: scroll;
+  overflow-y: auto;
+}
+
+.content-element:nth-child(2) .content-element__text-wrapper::-webkit-scrollbar {
+  width: 11px;
+}
+
+.content-element:nth-child(2) .content-element__text-wrapper::-webkit-scrollbar-track {
+  background: #c4c6c8;
+}
+
+.content-element:nth-child(2) .content-element__text-wrapper::-webkit-scrollbar-thumb {
+  background: #105b74;
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.4);
+}
+
+.content-element:nth-child(2) .content-element__text-wrapper::-webkit-scrollbar-thumb:vertical:hover {
+  background: #08a67c;
+}
+
+.content-element:nth-child(2) .content-element__text-wrapper::-webkit-scrollbar-thumb:horizontal:hover {
+  background: #08a67c;
 }
 
 .content-element:nth-child(3) .content-element__side {
