--- a/css/blocks/u_lesson.css
+++ b/css/blocks/u_lesson.css
@@ -1286,7 +1286,7 @@
   }
   .btn_title-icon {
     position: relative;
-    top: 3px;
+    top: 0px;
     right: 13px;
   }
   .block-header .title {
@@ -1570,10 +1570,10 @@
     margin: 0 0 30px 0;
   }
   .send {
-    max-width: 200px !important;
+    max-width: 200px;
   }
   .comments__items .comment {
-    margin-top: 24px !important;
+    margin-top: 24px;
   }
   .comments__items .comment:nth-child(1) {
     margin-top: 0;
@@ -1647,6 +1647,13 @@
     z-index: 2;
     background-color: white !important;
   }
+  /* Кнопки лайк и дизлайк */
+  .btn_outline-gray .btn__content {
+    max-width: 240px;
+  }
+  .btn__content {
+    max-width: 240px;
+  }
   .apprasial__inner {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1657,19 +1664,46 @@
     width: 100%;
   }
   .apprasial__buttons {
-    margin-left: 0px !important;
-    width: auto !important;
+    margin-left: 0px;
+    max-width: 490px;
+    right: 0;
+    top: -32px;
+    position: absolute;
+  }
+  .apprasial__buttons .content-element__header-btn:nth-child(2) {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 490px !important;
+  }
+  .dislike .btn__title {
+    width: 240px;
   }
   .dislike {
-    height: 60px !important;
-    width: 240px !important;
+    height: 60px;
+    max-width: 240px;
   }
-  .dislike::after {
+  .dislike__icon {
     border: 1px solid;
   }
   .like {
-    height: 60px !important;
-    width: 230px;
+    height: 60px;
+    max-width: 240px;
+  }
+  /* Иконки лайк и дизлайк */
+  .btn__icon_dislike::after {
+    border: 1px solid;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    top: 15%;
+  }
+  .btn__icon_like::after {
+    border: 1px solid;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    top: 65%;
   }
 }
 
