--- a/css/blocks/u_lesson.css
+++ b/css/blocks/u_lesson.css
@@ -34,45 +34,41 @@
 /* Обертка урока */
 .lessons {
   padding: 0 20px;
-  margin-top: 20px;
+  margin-top: 50px;
+}
+
+.backltolist {
+  width: 0 !important;
+  height: 0 !important;
 }
 
 /* Кнопка назад */
-.backltolist {
-  width: 0;
-  height: 0;
-}
-
-.subtitle {
-  margin-top: 10px;
-}
-
 .back {
-  position: relative;
-  left: 20px;
+  min-width: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  min-width: auto;
+  border-radius: 5px;
+  min-width: 200px;
+  position: absolute;
+  margin-left: 20px;
   -webkit-transition: all 0.4s linear;
   -o-transition: all 0.4s linear;
   transition: all 0.4s linear;
 }
 
 .back .btn_title-text {
-  margin-left: 30px;
-  -webkit-transform: translate(-10px, 10px);
-  -ms-transform: translate(-10px, 10px);
-  transform: translate(-10px, 10px);
+  width: 100%;
+  -webkit-transform: translate(-10px, 3px);
+  -ms-transform: translate(-10px, 3px);
+  transform: translate(-10px, 3px);
 }
 
-.back::after {
-  -webkit-transform: translate(-15px, -1px);
-  -ms-transform: translate(-15px, -1px);
-  transform: translate(-15px, -1px);
+.subtitle {
+  margin-top: 10px;
 }
 
 /* Кнопки Скачать и Посмотреть */
@@ -109,7 +105,7 @@
 
 .header__main {
   width: 100%;
-  padding: 20px 20px 10px;
+  padding: 0px 0px 0px;
 }
 
 .header__box {
@@ -490,7 +486,7 @@
   width: 30px;
   height: 30px;
   z-index: 1;
-  background-image: url(./../../img//lessons/del-attach.svg);
+  background-image: url(./../../img/lessons/del-attach.svg);
   background-size: 30px 30px;
   position: absolute;
   top: 5px;
@@ -1051,6 +1047,43 @@
   justify-content: space-between;
 }
 
+.header-btn__download {
+  position: relative;
+}
+
+.file__btns .content-element__header-btn:nth-child(2) {
+  position: relative;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.file__btns .content-element__header-btn:nth-child(2) .btn_title-text {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.file__btns .content-element__header-btn:nth-child(2) .btn_title-text svg {
+  position: absolute;
+  left: 50%;
+  top: 5px;
+  -webkit-transform: translateX(calc(-50% - 2px));
+  -ms-transform: translateX(calc(-50% - 2px));
+  transform: translateX(calc(-50% - 2px));
+}
+
+.selector {
+  margin-bottom: 20px;
+}
+
 @media (min-width: 375px) {
   /* Header */
   .header__item h3 {
@@ -1058,7 +1091,7 @@
   }
   .block-header .title {
     font-size: 31px;
-    margin-top: 36px;
+    margin-top: 28px;
   }
   .subtitle {
     margin-top: 9px;
@@ -1276,14 +1309,17 @@
     border: 1px solid #481E8C;
   }
   .back .btn_title-text {
-    padding-right: 30px;
+    display: inline-block;
     -webkit-transform: translateY(5px);
     -ms-transform: translateY(5px);
     transform: translateY(5px);
+    margin-right: 30px;
+    width: auto;
   }
   .back::after {
-    margin-left: 35px;
-    margin-top: -5px;
+    margin-left: 29px;
+    margin-right: 13px;
+    margin-top: 0px;
   }
   .back:hover {
     background-color: #481E8C;
@@ -1334,10 +1370,13 @@
     top: 0;
     margin-right: 40px;
   }
-  /* Контейенр */
+  /* Контейнер */
   .lessons {
     padding: 0;
     margin: 0;
+  }
+  .lessons__main {
+    margin-top: 40px;
   }
   .subtitle {
     font-weight: 500;
