--- a/css/pages/u_modules.css
+++ b/css/pages/u_modules.css
@@ -802,7 +802,7 @@ a {
 }
 
 .module-top__wrapper {
-  padding: 25px 20px 25px 8px;
+  padding: 25px 20px 25px 20px;
 }
 
 .module-top__inner {
@@ -939,6 +939,10 @@ a {
 
 .module-header__btn-container {
   margin-bottom: 0 !important;
+}
+
+.progress-bar__wrapper {
+  margin: 0;
 }
 
 .progress-bar__text {
@@ -1803,6 +1807,8 @@ a {
     line-height: 23px;
     letter-spacing: 0em;
     text-align: left;
+    white-space: normal;
+    max-width: 100%;
   }
   .module-header__buttons {
     display: -webkit-box;
@@ -1812,6 +1818,10 @@ a {
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
     flex-direction: row;
+  }
+  .module-header__buttons .not-start {
+    padding: 0;
+    height: 40px;
   }
   .module-header__btn-inner {
     width: auto;
@@ -1955,7 +1965,7 @@ a {
     line-height: 18px;
     letter-spacing: 0em;
     text-align: left;
-    width: 140px;
+    width: 140;
     height: 40px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1963,10 +1973,13 @@ a {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    -webkit-box-pack: end;
-    -ms-flex-pack: end;
-    justify-content: flex-end;
-    padding: 0 30px 0 0;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    padding: 0;
+  }
+  .sertifikat__btn svg {
+    display: none;
   }
   .sertifikat__estimation {
     font-size: 20px;
@@ -2445,7 +2458,7 @@ a {
     display: flex;
     opacity: 0;
     position: absolute;
-    right: 7%;
+    right: -38%;
     top: 62%;
     font-size: 18px;
     font-style: normal;
@@ -2462,14 +2475,22 @@ a {
     -o-transition: opacity 0.2s linear;
     transition: opacity 0.2s linear;
   }
-  .courses__open svg {
+  .courses__open span {
     width: 30px;
     height: 40px;
   }
-  .courses__open svg {
+  .courses__open span {
     width: 38px;
     height: 20px;
-    fill: #481E8C;
+    -webkit-mask-image: url(../../img/arrow-right.svg);
+    mask-image: url(../../img/arrow-right.svg);
+    background-color: #481E8C;
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-position: center;
+    mask-position: center;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
     -webkit-transform: translateX(23px);
     -ms-transform: translateX(23px);
     transform: translateX(23px);
@@ -2485,8 +2506,8 @@ a {
   .courses.light .available-course__side .courses__open {
     color: white;
   }
-  .courses.light .available-course__side .courses__open svg {
-    fill: white;
+  .courses.light .available-course__side .courses__open span {
+    background-color: white;
   }
 }
 
@@ -2754,6 +2775,86 @@ a {
 }
 
 @media (min-width: 768px) and (min-width: 1024px) {
+  .courses {
+    padding-left: 24px;
+    padding-bottom: 70px;
+  }
+  .courses__image {
+    position: absolute;
+    bottom: 0;
+  }
+  .courses__title {
+    margin-top: 4px;
+    font-size: 34px;
+  }
+  .courses__type {
+    margin-top: 9px;
+  }
+  .available-courses__list + .block-delimiter {
+    margin-top: 34px;
+  }
+  .block-delimiter + .sertifikat {
+    margin-top: 34px;
+  }
+  .available-course__info {
+    margin-bottom: 0;
+    -webkit-transform: translate(5px, 24px);
+    -ms-transform: translate(5px, 24px);
+    transform: translate(5px, 24px);
+  }
+  .info__item:nth-child(2) {
+    margin-left: 18px;
+  }
+  .info__item:last-child {
+    margin-left: 40px;
+  }
+  .sertifikat__title {
+    -webkit-transform: translateY(-5px);
+    -ms-transform: translateY(-5px);
+    transform: translateY(-5px);
+  }
+  .sertifikat__btn {
+    -webkit-transform: translateY(-10px);
+    -ms-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+  .sertifikat__headline {
+    -webkit-transform: translateY(8px);
+    -ms-transform: translateY(8px);
+    transform: translateY(8px);
+  }
+  .sertifikat__estimation {
+    width: 64%;
+  }
+  .sertifikat-raiting {
+    margin-left: 10px;
+  }
+  .sertifikat-raiting__name {
+    margin-top: 28px;
+  }
+  .sertifikat-raiting__item {
+    margin-right: 7px;
+  }
+  .sertifikat-raiting__item svg {
+    width: 28px;
+    height: 28px;
+  }
+  .sertifikat-feedback__headline {
+    font-size: 20px;
+    margin-top: 10px;
+  }
+  .sertifikat-feedback__textarea {
+    height: 155px;
+  }
+  .sertifikat-feedback__controls {
+    margin-top: 5px;
+  }
+  .sertifikat-feedback__btn {
+    margin-right: 10px;
+  }
+  .estimation__inner p {
+    font-size: 24px;
+  }
   .module-main__side {
     width: auto;
     margin-top: 10px;
